--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.use-new-id-generator-mappings=true
+security.basic.enabled=false
+management.security.enabled=false
