--- a/client-app/package.json
+++ b/client-app/package.json
@@ -12,42 +12,64 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.0",
-    "@angular/common": "^5.2.0",
-    "@angular/compiler": "^5.2.0",
-    "@angular/core": "^5.2.0",
-    "@angular/forms": "^5.2.0",
-    "@angular/http": "^5.2.0",
-    "@angular/platform-browser": "^5.2.0",
-    "@angular/platform-browser-dynamic": "^5.2.0",
-    "@angular/router": "^5.2.0",
+    "@angular/animations": "^6.1.4",
+    "@angular/cdk": "^6.4.6",
+    "@angular/common": "^6.1.4",
+    "@angular/compiler": "^6.1.4",
+    "@angular/core": "^6.1.4",
+    "@angular/forms": "^6.1.4",
+    "@angular/http": "^6.1.4",
+    "@angular/material": "^6.4.6",
+    "@angular/platform-browser": "^6.1.4",
+    "@angular/platform-browser-dynamic": "^6.1.4",
+    "@angular/platform-server": "^6.1.4",
+    "@angular/router": "^6.1.4",
+    "@clr/angular": "^0.12.8",
+    "@clr/icons": "^0.12.8",
+    "@clr/ui": "^0.12.8",
+    "@ng-idle/core": "^6.0.0-beta.3",
     "@webcomponents/custom-elements": "^1.0.0",
-    "clarity-angular": "^0.10.23",
-    "clarity-icons": "^0.10.23",
-    "clarity-ui": "^0.10.23",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.5.6",
-    "zone.js": "^0.8.19"
+    "angular2-jwt": "^0.2.3",
+    "angular2-text-mask": "^8.0.4",
+    "core-js": "^2.5.3",
+    "file-saver": "1.3.8",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
+    "primeicons": "^1.0.0-beta.10",
+    "primeng": "^6.1.2",
+    "rxjs": "^6.2.2",
+    "rxjs-compat": "^6.2.2",
+    "zone.js": "^0.8.20"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.5",
-    "@angular/compiler-cli": "^5.2.0",
-    "@angular/language-service": "^5.2.0",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "codelyzer": "^4.0.1",
-    "jasmine-core": "~2.8.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
-    "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
-    "typescript": "~2.5.3"
+    "@angular-devkit/build-angular": "0.7.0",
+    "@angular-devkit/core": "^0.4.9",
+    "@angular-devkit/schematics": "0.0.42",
+    "@angular/cli": "^6.1.5",
+    "@angular/compiler-cli": "^6.1.4",
+    "@angular/language-service": "^6.1.4",
+    "@types/hammerjs": "2.0.34",
+    "@types/jasmine": "2.5.54",
+    "@types/jasminewd2": "2.0.3",
+    "@types/node": "6.0.90",
+    "cheerio": "^1.0.0-rc.2",
+    "codelyzer": "^3.2.2",
+    "gar": "^1.0.3",
+    "jasmine-core": "2.6.4",
+    "jasmine-spec-reporter": "4.1.1",
+    "karma": "^3.0.0",
+    "karma-chrome-launcher": "2.1.1",
+    "karma-cli": "1.0.1",
+    "karma-coverage-istanbul-reporter": "1.3.0",
+    "karma-jasmine": "1.1.0",
+    "karma-jasmine-html-reporter": "0.2.2",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "node-datetime": "^2.0.3",
+    "protractor": "^5.4.0",
+    "replace-in-file": "^3.0.0",
+    "ts-node": "^5.0.1",
+    "tslint": "^5.9.1",
+    "typescript": "^2.9.2",
+    "webpack-bundle-analyzer": "^2.11.1"
   }
 }
