--- a/client-app/package.json
+++ b/client-app/package.json
@@ -12,7 +12,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.4",
+    "@angular/animations": "^6.1.10",
     "@angular/cdk": "^6.4.6",
     "@angular/common": "^6.1.4",
     "@angular/compiler": "^6.1.4",
@@ -24,9 +24,9 @@
     "@angular/platform-browser-dynamic": "^6.1.4",
     "@angular/platform-server": "^6.1.4",
     "@angular/router": "^6.1.4",
-    "@clr/angular": "^0.12.8",
-    "@clr/icons": "^0.12.8",
-    "@clr/ui": "^0.12.8",
+    "@clr/angular": "^0.12.16",
+    "@clr/icons": "^0.12.16",
+    "@clr/ui": "^0.12.16",
     "@ng-idle/core": "^6.0.0-beta.3",
     "@webcomponents/custom-elements": "^1.0.0",
     "angular2-jwt": "^0.2.3",
@@ -35,8 +35,8 @@
     "file-saver": "1.3.8",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
-    "primeicons": "^1.0.0-beta.10",
-    "primeng": "^6.1.2",
+    "primeicons": "^1.0.0",
+    "primeng": "^6.1.7",
     "rxjs": "^6.2.2",
     "rxjs-compat": "^6.2.2",
     "zone.js": "^0.8.20"
