--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.datasource.url= jdbc:postgresql://localhost:5432/equipomedicodb
 spring.datasource.username=postgres
 spring.datasource.password=admin
-spring.jpa.hibernate.ddl-auto= create
+spring.jpa.hibernate.ddl-auto= update
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.use-new-id-generator-mappings=true
-management.security.enabled=false
+
+management.security.enabled = false
