--- a/client-app/package.json
+++ b/client-app/package.json
@@ -13,17 +13,17 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.1.10",
-    "@angular/cdk": "^6.4.6",
-    "@angular/common": "^6.1.4",
-    "@angular/compiler": "^6.1.4",
-    "@angular/core": "^6.1.4",
-    "@angular/forms": "^6.1.4",
+    "@angular/cdk": "^6.4.7",
+    "@angular/common": "^6.1.10",
+    "@angular/compiler": "^6.1.10",
+    "@angular/core": "^6.1.10",
+    "@angular/forms": "^6.1.10",
     "@angular/http": "^6.1.4",
-    "@angular/material": "^6.4.6",
-    "@angular/platform-browser": "^6.1.4",
-    "@angular/platform-browser-dynamic": "^6.1.4",
-    "@angular/platform-server": "^6.1.4",
-    "@angular/router": "^6.1.4",
+    "@angular/material": "^6.4.7",
+    "@angular/platform-browser": "^6.1.10",
+    "@angular/platform-browser-dynamic": "^6.1.10",
+    "@angular/platform-server": "^6.1.10",
+    "@angular/router": "^6.1.10",
     "@clr/angular": "^0.12.16",
     "@clr/icons": "^0.12.16",
     "@clr/ui": "^0.12.16",
@@ -31,45 +31,47 @@
     "@webcomponents/custom-elements": "^1.0.0",
     "angular2-jwt": "^0.2.3",
     "angular2-text-mask": "^8.0.4",
-    "core-js": "^2.5.3",
+    "core-js": "^2.6.11",
     "file-saver": "1.3.8",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "primeicons": "^1.0.0",
     "primeng": "^6.1.7",
-    "rxjs": "^6.2.2",
+    "rxjs": "^6.5.4",
     "rxjs-compat": "^6.2.2",
-    "zone.js": "^0.8.20"
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.7.0",
+    "@angular-devkit/build-angular": "^0.7.0",
     "@angular-devkit/core": "^0.4.9",
     "@angular-devkit/schematics": "0.0.42",
-    "@angular/cli": "^6.1.5",
-    "@angular/compiler-cli": "^6.1.4",
-    "@angular/language-service": "^6.1.4",
+    "@angular/cli": "^6.2.9",
+    "@angular/compiler-cli": "^6.1.10",
+    "@angular/language-service": "^6.1.10",
     "@types/hammerjs": "2.0.34",
-    "@types/jasmine": "2.5.54",
+    "@types/jasmine": "^2.5.54",
     "@types/jasminewd2": "2.0.3",
-    "@types/node": "6.0.90",
+    "@types/node": "^6.0.90",
     "cheerio": "^1.0.0-rc.2",
     "codelyzer": "^3.2.2",
     "gar": "^1.0.3",
-    "jasmine-core": "2.6.4",
-    "jasmine-spec-reporter": "4.1.1",
-    "karma": "^3.0.0",
-    "karma-chrome-launcher": "2.1.1",
-    "karma-cli": "1.0.1",
+    "jasmine-core": "^2.6.4",
+    "jasmine-spec-reporter": "^4.1.1",
+    "karma": "^3.1.4",
+    "karma-chrome-launcher": "^2.1.1",
+    "karma-cli": "^1.0.1",
     "karma-coverage-istanbul-reporter": "1.3.0",
-    "karma-jasmine": "1.1.0",
-    "karma-jasmine-html-reporter": "0.2.2",
+    "karma-jasmine": "^1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
     "karma-phantomjs-launcher": "^1.0.4",
     "node-datetime": "^2.0.3",
-    "protractor": "^5.4.0",
+    "protractor": "^5.4.3",
     "replace-in-file": "^3.0.0",
+    "rxjs-tslint": "^0.1.7",
     "ts-node": "^5.0.1",
-    "tslint": "^5.9.1",
+    "tslint": "^5.20.1",
     "typescript": "^2.9.2",
+    "webpack": "^4.41.6",
     "webpack-bundle-analyzer": "^2.11.1"
   }
 }
