Cambios en agregar y editar equipos

--- a/client-app/package.json
+++ b/client-app/package.json
@@ -25,10 +25,12 @@
     "@angular/platform-server": "^6.1.10",
     "@angular/router": "^6.1.10",
     "@clr/angular": "^0.12.16",
+    "@clr/core": "^3.1.2",
     "@clr/icons": "^0.12.16",
     "@clr/ui": "^0.12.16",
     "@ng-idle/core": "^6.0.0-beta.3",
     "@webcomponents/custom-elements": "^1.0.0",
+    "@webcomponents/webcomponentsjs": "^2.4.3",
     "angular2-jwt": "^0.2.3",
     "angular2-text-mask": "^8.0.4",
     "core-js": "^2.6.11",
