--- a/client-app/package.json
+++ b/client-app/package.json
@@ -19,6 +19,7 @@
     "@angular/core": "^6.1.10",
     "@angular/forms": "^6.1.10",
     "@angular/http": "^6.1.4",
+    "@angular/localize": "^9.1.9",
     "@angular/material": "^6.4.7",
     "@angular/platform-browser": "^6.1.10",
     "@angular/platform-browser-dynamic": "^6.1.10",
