--- a/client-app/package.json
+++ b/client-app/package.json
@@ -12,21 +12,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.1.6",
+    "@angular/animations": "^11.0.5",
     "@angular/cdk": "^6.4.7",
-    "@angular/common": "^10.1.6",
-    "@angular/compiler": "^10.1.6",
-    "@angular/core": "^10.1.6",
-    "@angular/forms": "^10.1.6",
+    "@angular/common": "^11.0.5",
+    "@angular/compiler": "^11.0.5",
+    "@angular/core": "^11.0.5",
+    "@angular/forms": "^11.0.5",
     "@angular/http": "^6.1.4",
-    "@angular/localize": "^10.1.6",
+    "@angular/localize": "^11.0.5",
     "@angular/material": "^6.4.7",
-    "@angular/platform-browser": "^10.1.6",
-    "@angular/platform-browser-dynamic": "^10.1.6",
-    "@angular/platform-server": "^10.1.6",
-    "@angular/router": "^10.1.6",
+    "@angular/platform-browser": "^11.0.5",
+    "@angular/platform-browser-dynamic": "^11.0.5",
+    "@angular/platform-server": "^11.0.5",
+    "@angular/router": "^11.0.5",
     "@clr/angular": "^0.12.16",
-    "@clr/core": "^3.1.11",
+    "@clr/core": "^3.1.14",
     "@clr/icons": "^0.12.16",
     "@clr/ui": "^0.12.16",
     "@ng-idle/core": "^6.0.0-beta.3",
@@ -45,34 +45,34 @@
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1002.0",
-    "@angular-devkit/core": "^10.2.0",
-    "@angular-devkit/schematics": "0.0.42",
-    "@angular/cli": "^10.1.7",
-    "@angular/compiler-cli": "^10.1.6",
-    "@angular/language-service": "^10.1.6",
+    "@angular-devkit/build-angular": "^0.1100.4",
+    "@angular-devkit/core": "^11.0.4",
+    "@angular-devkit/schematics": "11.0.4",
+    "@angular/cli": "^11.0.4",
+    "@angular/compiler-cli": "^11.0.5",
+    "@angular/language-service": "^11.0.5",
     "@types/hammerjs": "2.0.34",
-    "@types/jasmine": "^2.5.54",
+    "@types/jasmine": "3.6.0",
     "@types/jasminewd2": "2.0.3",
     "@types/node": "^6.0.90",
     "cheerio": "^1.0.0-rc.2",
-    "codelyzer": "^3.2.2",
+    "codelyzer": "^6.0.0",
     "gar": "^1.0.3",
-    "jasmine-core": "^2.6.4",
-    "jasmine-spec-reporter": "^4.1.1",
+    "jasmine-core": "3.6.0",
+    "jasmine-spec-reporter": "5.0.0",
     "karma": "^5.2.3",
-    "karma-chrome-launcher": "^2.1.1",
+    "karma-chrome-launcher": "3.1.0",
     "karma-cli": "^1.0.1",
     "karma-coverage-istanbul-reporter": "1.3.0",
-    "karma-jasmine": "^1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-jasmine": "4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "karma-phantomjs-launcher": "^1.0.4",
     "node-datetime": "^2.0.3",
     "protractor": "^7.0.0",
     "replace-in-file": "^6.1.0",
     "rxjs-tslint": "^0.1.8",
     "ts-node": "^5.0.1",
-    "tslint": "^5.20.1",
+    "tslint": "^6.1.3",
     "typescript": "^4.0.3",
     "webpack": "^4.41.6",
     "webpack-bundle-analyzer": "^3.9.0"
