--- a/client-app/package.json
+++ b/client-app/package.json
@@ -25,23 +25,22 @@
     "@angular/platform-browser-dynamic": "^11.2.7",
     "@angular/platform-server": "^11.2.7",
     "@angular/router": "^11.2.7",
-    "@clr/angular": "^0.12.16",
-    "@clr/core": "^3.1.15",
-    "@clr/icons": "^0.12.16",
-    "@clr/ui": "^0.12.16",
+    "@clr/angular": "^5.1.1",
+    "@clr/core": "^4.0.12",
+    "@clr/icons": "^5.1.1",
+    "@clr/ui": "^5.1.1",
     "@ng-idle/core": "^6.0.0-beta.5",
     "@webcomponents/custom-elements": "^1.4.3",
     "@webcomponents/webcomponentsjs": "^2.5.0",
     "angular2-jwt": "^0.2.3",
     "angular2-text-mask": "^8.0.4",
     "core-js": "^2.6.12",
-    "file-saver": "1.3.8",
+    "file-saver": "^1.3.8",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
-    "primeicons": "^1.0.0",
-    "primeng": "^6.1.7",
     "rxjs": "^6.6.7",
     "rxjs-compat": "^6.6.7",
+    "xlsx": "^0.16.9",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
