--- a/client-app/package.json
+++ b/client-app/package.json
@@ -12,19 +12,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.2.7",
-    "@angular/cdk": "^6.4.7",
+    "@angular/animations": "^11.2.12",
+    "@angular/cdk": "^11.2.11",
     "@angular/common": "^11.2.7",
     "@angular/compiler": "^11.2.7",
     "@angular/core": "^11.2.7",
     "@angular/forms": "^11.2.7",
     "@angular/http": "^6.1.4",
     "@angular/localize": "^11.2.7",
-    "@angular/material": "^6.4.7",
+    "@angular/material": "^11.2.10",
     "@angular/platform-browser": "^11.2.7",
     "@angular/platform-browser-dynamic": "^11.2.7",
     "@angular/platform-server": "^11.2.7",
     "@angular/router": "^11.2.7",
+    "@cds/core": "^5.1.1",
     "@clr/angular": "^5.1.1",
     "@clr/core": "^4.0.12",
     "@clr/icons": "^5.1.1",
@@ -35,9 +36,11 @@
     "angular2-jwt": "^0.2.3",
     "angular2-text-mask": "^8.0.4",
     "core-js": "^2.6.12",
+    "exceljs": "^1.12.0",
     "file-saver": "^1.3.8",
     "font-awesome": "^4.7.0",
-    "hammerjs": "^2.0.8",
+    "primeicons": "^4.1.0",
+    "primeng": "^11.4.0",
     "rxjs": "^6.6.7",
     "rxjs-compat": "^6.6.7",
     "xlsx": "^0.16.9",
