--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
 			<version>5.2.2.RELEASE</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -66,6 +71,8 @@
 			</plugin>
 		</plugins>
 	</build>
+
+
 
 
 </project>
