Conectando la parte angular de la app
Signed-off-by: Brenda Quinhonez <brenda@softwarenatura.com>

--- a/client-app/package.json
+++ b/client-app/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
+    "heroku-postbuild": "ng build --prod && npm install -g http-server-spa",
     "start": "ng serve",
     "build": "ng build --prod",
     "test": "ng test",
