--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url= jdbc:postgresql://localhost:5432/equipomedicodb
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=admin
 #spring.jpa.hibernate.ddl-auto= update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto= create
