--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.hibernate.ddl-auto= create
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.use-new-id-generator-mappings=true
 management.security.enabled=false
+server.port=${PORT:8080}
+
