--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,9 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/equipomedicodb
-spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.url=${JDBC_DATABASE_URL}
+server.port=${PORT:8080}
 #spring.jpa.hibernate.ddl-auto= update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto= create
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.use-new-id-generator-mappings=true
 management.security.enabled=false
-server.port=${PORT:8080}
 
